--- a/views/confirmardeletaruser.ejs
+++ b/views/confirmardeletaruser.ejs
@@ -2,17 +2,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Confirmar Exclusão</title>
-  <link rel="stylesheet" href="../estilos/deletaruser.css">
+    <title>Confirmar Exclusão</title>
+    <link rel="stylesheet" href="../estilos/deletaruser.css">
 </head>
 <body>
-  <h1>Confirmar Exclusão</h1>
-  <p>Você está prestes a excluir o usuário:</p>
-  <p>Nome: <%= usuario.nome %></p>
-  <p>CPF: <%= usuario.cpf %></p>
-  <form action="/deletaruser/<%= usuario.cpf %>" method="post">
-    <button type="submit">Confirmar Exclusão</button>
-  </form>
-  <a href="users/telainicial">Cancelar</a>
+<div>
+    <h1>Confirmar Exclusão</h1>
+    <p>Você está prestes a excluir o usuário:</p>
+    <p>Nome: <%= usuario.nome %></p>
+    <p>CPF: <%= usuario.cpf %></p>
+    <form action="/deletaruser/<%= usuario.cpf %>" method="post">
+        <button type="submit">Confirmar Exclusão</button>
+    </form>
+    <a href="users/telainicial">Cancelar</a>
+</div>
 </body>
 </html>
