--- a/views/reserva.ejs
+++ b/views/reserva.ejs
@@ -13,16 +13,20 @@
         <div class="card-body">
             <form action="/reservar" method="post">
                 <label for="nome">Digite Nome</label>
-                <input type="text" class="form-control" name="nome">
+                <input type="text" id="nome" class="form-control" value="<%= user ? user.nome : '' %>" name="nome">
+
                 <label for="telefone">Digite o Contato</label>
-                <input type="text" class="form-control" name="telefone">
+                <input type="text" id="telefone" class="form-control" value="<%= user ? user.telefone : '' %>" name="telefone">
+
                 <h5 class="mt-1">Dados da Reserva</h5>
+
                 <input type="hidden" value='<%= id.data %>' name="data">
                 <input type="hidden" value='<%= id.id %>' name="id">
                 <input type="hidden" value="<%= id.horario %>" name="horario">
                 <input type="hidden" value="<%= user_id.id %>" name="user_id">
 
                 <hr>
+
                 <small>Profissional: <Strong><%= user_id.nome %></Strong></small> <br>
                 <small>Horas: <strong><%= id.horario.substring(0, 5) %> </strong> </small><br>
                 <small>Reserva para o Dia: <strong><%= new Date(id.data).toLocaleDateString('pt-BR') %> </strong></small> <br>
