Ajuste na observação das agendas

--- a/views/cadastrouser.ejs
+++ b/views/cadastrouser.ejs
@@ -80,7 +80,13 @@
                     <input type="text" name="cpf" id="cpf" class="form-control">
 
                     <label for="profissao">Profissão:</label>
-                    <input type="text" name="profissao" class="form-control">
+                    <select name="profissao" id="profissao" class="form-control">
+                        <option value="Professor(a)">Professor(a)</option>
+                        <option value="Barbeiro">Barbeiro</option>
+                        <option value="Cabelereiro(a)">Cabelereiro(a)</option>
+                        <option value="Manicure">Manicure</option>
+                        <option value="Serviços eletronicos (Ti)">Serviços eletronicos (Ti)</option>
+                    </select>
 
                     <label for="telefone">telefone</label>
                     <input name="telefone" id="telefone" class="form-control" type="text">
